--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>阿里巴巴1688</title>
   <link rel="stylesheet" href="../dist/output.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.css"  rel="stylesheet" />
+    <script src="index.js"></script>
 </head>
 <body>
+
     <div class="w-full h-full bg-gray-100">
         <header class="w-full h-8 bg-white flex justify-between items-center box-border border-solid border-b-gray-200 border-b">
-            <div class="ml-32 text-gray-600 font text-xs flex">
+            <div class="ml-28 text-gray-600 font text-xs flex">
                 <!--<svg>这里应该有小手机的图标</svg>-->
                 <div class=" mr-2">手机阿里 </div>
                 <div class="mr-2">欢迎来到阿里巴巴</div>
@@ -41,7 +44,7 @@
         <!--标题部分-->
         <div class="w-full h-20 bg-white box-border border-solid border-b-gray-200 border-b flex items-center">
             <!--标题左半边-->
-            <div class="ml-32 flex items-center">
+            <div class="ml-28 flex items-center">
                 <div class="text-5xl text-[#FF4000] font-extrabold">1688</div>
                 <div class="text-[18px] text-gray-400 leading-tight ml-2 font-extrabold">
                     <p class="">找工厂</p>
@@ -65,31 +68,89 @@
         <!--搜索框部分-->
         <div class="w-full h-24 box-border flex justify-center p-6 bg-gray-100">
 
-            <div class="w-[73%] h-12 bg-white box-border border-solid border-[#FF4000] rounded border-2 flex items-center text-gray-500">
-                <p class=" ml-10 mr-auto font-light text-sm">搜索 商品/供应商/求购</p>
+            <div class="w-[75%] h-12 bg-white box-border border-solid border-[#FF4000] rounded border-2 flex items-center text-gray-500">
+                <p class=" ml-10 mr-auto font-light text-sm select-none">搜索 商品/供应商/求购</p>
                 <button class=" w-32 h-12 mr-0 bg-gradient-to-r from-[#FF7E3E] to-[#FF4000] text-white text-lg font-light">搜 索</button>
             </div>
         </div>
 
         <!--搜索框下面的三部分-->
-        <div class="flex mx-32 justify-around divide-y divide-gray-200 ">
-            <!--品类市场-->
-            <ul class="w-56 p-2 bg-white box-border rounded shadow divide-solid divide-y ">
+        <div class="flex mx-24 justify-around divide-y divide-gray-200 ">
+            <!--左侧品类市场-->
+            <ul class="w-[18%] p-2 bg-white box-border rounded shadow ">
                 <li class=" h-8">
-                    <p class="text-sm ml-4">品类市场</p>
+                    <p class="text-base ml-4">品类市场</p>
                 </li>
-                <li class="text-xs h-10">
-                    <p class="ml-4">品类市场</p>
+                <li class="text-[14px] h-8 flex items-center">
+                    <div class="ml-4">女装</div>
+                    <div class="ml-2">男装</div>
+                    <div class="ml-2">内衣</div>
+                </li>
+                <li class="text-[14px] h-8 flex items-center">
+                    <div class="ml-4">配饰</div>
+                    <div class="ml-2">鞋靴</div>
+                    <div class="ml-2">箱包</div>
+                </li>
+                <li class="text-[14px] h-8 flex items-center">
+                    <div class="ml-4">运动服饰</div>
+                    <div class="ml-2">运动装备</div>
+                </li>
+                <li class="text-[14px] h-8 flex items-center">
+                    <div class="ml-4">童装</div>
+                    <div class="ml-2">母婴</div>
+                    <div class="ml-2">玩具</div>
+                </li>
+                <li class="text-[14px] h-8 flex items-center">
+                    <div class="ml-4">家居百货</div>
+                    <div class="ml-2">家纺家饰</div>
+                </li>
+                <li class="text-[14px] h-8 flex items-center">
+                    <div class="ml-4">家装建材</div>
+                    <div class="ml-2">灯饰照明</div>
+                </li>
+                <li class="text-[14px] h-8 flex items-center">
+                    <div class="ml-4">办公文教</div>
+                    <div class="ml-2">宠物园艺</div>
+                </li>
+                <li class="text-[14px] h-8 flex items-center">
+                    <div class="ml-4">食品酒水</div>
+                    <div class="ml-2">餐饮生鲜</div>
+                </li>
+                <li class="text-[14px] h-8 flex items-center">
+                    <div class="ml-4">美容化妆</div>
+                    <div class="ml-2">个护家清</div>
+                </li>
+                <li class="text-[14px] h-8 flex items-center">
+                    <div class="ml-4">数码</div>
+                    <div class="ml-2">家电</div>
+                    <div class="ml-2">汽车用品</div>
                 </li>
             </ul>
 
-            <div class="w-56 p-2 flex bg-white box-border rounded shadow">
-                <div class="text-lg h-10">
-                    <p class="ml-4">品类市场</p>
+            <!--中间的广告和快捷选项-->
+            <div class="w-[49%] flex bg-white box-border rounded shadow">
+                <!--创建轮播容器和包含所有轮播图片的div-->
+                <div class="w-full my-0 mx-auto carousel">
+                    <!--用flexbox类将轮播图水平排列-->
+                    <div class="overflow-hidden flex w-full carousel-images">
+                        <img src="/src/assests/images/lunbotu1.png" alt="Image 1" class="flex-grow-0 w-full">
+                        <img src="/src/assests/images/lunbotu2.jpg" alt="Image 2" class="flex-grow-0 w-full hiddent" >
+                        <img src="/src/assests/images/lunbotu3.png" alt="Image 3" class="flex-grow-0 w-full hiddent" >
+                        <img src="/src/assests/images/lunbotu4.png" alt="Image 4" class="flex-grow-0 w-full hiddent" >
+                    </div>
+
+                    <!--添加小圆点-->
+                    <div class="carousel-dots flex justify-center  mt-2 ">
+                        <button class="w-2 h-2 rounded-full bg-orange-500 mr-1 dot active" onclick="changeImage(0)"></button>
+                        <button class="w-2 h-2 rounded-full bg-orange-500 mr-1 dot" onclick="changeImage(1)"></button>
+                        <button class="w-2 h-2 rounded-full bg-orange-500 mr-1 dot" onclick="changeImage(2)"></button>
+                        <button class="w-2 h-2 rounded-full bg-orange-500 dot" onclick="changeImage(3)"></button>
+                    </div>
                 </div>
             </div>
 
-            <div class="w-56 p-2 flex bg-white box-border rounded shadow">
+
+            <div class="w-[29%] p-2 flex bg-white box-border rounded shadow">
                 <div class="text-lg h-10">
                     <p class="ml-4">品类市场</p>
                 </div>
