--- a/src/index.html
+++ b/src/index.html
@@ -11,12 +11,12 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.css"  rel="stylesheet" />
     <script src="index.js"></script>
 </head>
-<body><div>
+<body><div class="flex justify-center items-center bg-gray-100">
     <!--整个页面的左半边-->
-<div class="w-full h-full flex flex-col ">
-    <div class="w-[1385px] h-full bg-gray-100">
-        <header class="w-full h-8 bg-white flex justify-between items-center box-border border-solid border-b-gray-200 border-b">
-            <div class="ml-28 text-gray-600 font text-xs flex items-center">
+<div class="w-auto h-full flex flex-col ">
+    <div class="w-auto h-full bg-gray-100">
+        <header class="w-full h-8 bg-white flex justify-center items-center box-border border-solid border-b-gray-200 border-b">
+            <div class=" text-gray-600 font text-xs flex items-center">
                 <svg class="text-[#FF4000]" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24"><path fill="currentColor" d="M16 1H8C6.34 1 5 2.34 5 4v16c0 1.66 1.34 3 3 3h8c1.66 0 3-1.34 3-3V4c0-1.66-1.34-3-3-3zm-2 20h-4v-1h4v1zm3.25-3H6.75V4h10.5v14z"/></svg>
                 <div class=" mr-2">手机阿里 </div>
                 <div class="mr-2">欢迎来到阿里巴巴</div>
@@ -52,9 +52,9 @@
         </header>
 
         <!--标题部分-->
-        <div class="w-full h-20 bg-white box-border border-solid border-b-gray-200 border-b flex items-center">
+        <div class="w-full h-20 bg-white box-border border-solid border-b-gray-200 border-b flex justify-center items-center">
             <!--标题左半边-->
-            <div class="ml-28 flex items-center">
+            <div class=" flex items-center">
                 <div class="text-5xl text-[#FF4000] font-extrabold font-['FreestyleScript']">1688</div>
                 <div class="text-lg text-gray-400 leading-tight ml-2 font-extrabold">
                     <p class="">找工厂</p>
@@ -76,10 +76,11 @@
         </div>
 
         <!--搜索框部分-->
-        <div class=" h-24 ml-36 box-border flex p-6 bg-gray-100">
+        <div class=" h-24 box-border flex justify-center p-6 bg-gray-100 ">
 
             <div class="w-[1050px] h-12 bg-white box-border border-solid border-[#FF4000] rounded border-2 flex items-center text-gray-500">
-                <p class=" ml-10 mr-auto font-light text-sm select-none">搜索 商品/供应商/求购</p>
+                <svg class="ml-4" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 256 256"><path fill="currentColor" d="m229.66 218.34l-50.07-50.06a88.11 88.11 0 1 0-11.31 11.31l50.06 50.07a8 8 0 0 0 11.32-11.32ZM40 112a72 72 0 1 1 72 72a72.08 72.08 0 0 1-72-72Z"/></svg>
+                <p class=" ml-4 mr-auto font-light text-sm select-none">搜索 商品/供应商/求购</p>
                 <svg class="mr-2" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"><path fill="currentColor" fill-rule="evenodd" d="M7.598 4.487c.267-1.31 1.433-2.237 2.768-2.237h3.268c1.335 0 2.5.927 2.768 2.237a.656.656 0 0 0 .62.524h.033c1.403.062 2.481.234 3.381.825c.567.372 1.055.85 1.435 1.409c.473.694.681 1.492.781 2.456c.098.943.098 2.124.098 3.62v.085c0 1.496 0 2.678-.098 3.62c-.1.964-.308 1.762-.781 2.457a5.155 5.155 0 0 1-1.435 1.409c-.703.461-1.51.665-2.488.762c-.958.096-2.159.096-3.685.096H9.737c-1.526 0-2.727 0-3.685-.096c-.978-.097-1.785-.3-2.488-.762a5.155 5.155 0 0 1-1.435-1.41c-.473-.694-.681-1.492-.781-2.456c-.098-.942-.098-2.124-.098-3.62v-.085c0-1.496 0-2.677.098-3.62c.1-.964.308-1.762.781-2.456a5.155 5.155 0 0 1 1.435-1.41c.9-.59 1.978-.762 3.381-.823l.017-.001h.016a.656.656 0 0 0 .62-.524Zm2.768-.737c-.64 0-1.177.443-1.298 1.036c-.195.96-1.047 1.716-2.072 1.725c-1.348.06-2.07.225-2.61.579a3.665 3.665 0 0 0-1.017.999c-.276.405-.442.924-.53 1.767c-.088.856-.089 1.96-.089 3.508s0 2.651.09 3.507c.087.843.253 1.362.53 1.768c.268.394.613.734 1.017.998c.417.274.951.439 1.814.525c.874.087 2 .088 3.577.088h4.444c1.576 0 2.702 0 3.577-.088c.863-.086 1.397-.25 1.814-.524c.404-.265.75-.605 1.018-1c.276-.405.442-.924.53-1.767c.088-.856.089-1.96.089-3.507c0-1.548 0-2.652-.09-3.508c-.087-.843-.253-1.362-.53-1.767a3.655 3.655 0 0 0-1.017-1c-.538-.353-1.26-.518-2.61-.578c-1.024-.01-1.876-.764-2.071-1.725a1.314 1.314 0 0 0-1.298-1.036h-3.268Zm1.634 7a2.25 2.25 0 1 0 0 4.5a2.25 2.25 0 0 0 0-4.5ZM8.25 13a3.75 3.75 0 1 1 7.5 0a3.75 3.75 0 0 1-7.5 0Zm9-3a.75.75 0 0 1 .75-.75h1a.75.75 0 0 1 0 1.5h-1a.75.75 0 0 1-.75-.75Z" clip-rule="evenodd"/></svg>
                 <button class=" w-32 h-12 mr-0 bg-gradient-to-r from-[#FF7E3E] to-[#FF4000] text-white text-lg font-light">搜 索</button>
             </div>
@@ -87,7 +88,7 @@
 
 
         <!--搜索框下面的三部分-->
-        <div class="flex ml-28">
+        <div class="flex justify-center">
             <!--左侧品类市场-->
             <ul class="w-[220px] h-96 p-2 bg-white text-sm box-border rounded shadow flex flex-col">
                 <li class="w-full h-9 flex items-center mt-1">
@@ -237,37 +238,37 @@
                 </div>
 
                 <!--一键登录享更多权益-->
-                <div class="w-full ">
-                    <img src="assests/images/一键登录享更多权益.avif"/>
+                <div class="w-full flex box-border border">
+                    <img class="" src="assests/images/一键登录享更多权益.avif"/>
                 </div>
 
                 <!--账号详细信息-->
                 <div class="w-full h-[5.25vw] p-1 box-border border-solid border-b-gray-100 border-b flex flex-row justify-center items-center">
-                    <div class="w-1/4 pt-1 flex flex-col justify-center items-center">
+                    <div class="w-1/4  flex flex-col justify-center items-center">
                         <p class="text-xl text-black font-normal">0</p>
                         <p class="text-sm text-gray-500 ">待付款</p>
                     </div>
 
-                    <div class="w-1/4 pt-1 flex flex-col justify-center items-center">
+                    <div class="w-1/4  flex flex-col justify-center items-center">
                         <p class="text-xl text-black font-normal">0</p>
-                        <p class="text-sm text-gray-500 ">待付款</p>
+                        <p class="text-sm text-gray-500 ">待发货</p>
                     </div>
 
-                    <div class="w-1/4 pt-1 flex flex-col justify-center items-center">
+                    <div class="w-1/4  flex flex-col justify-center items-center">
                         <p class="text-xl text-black font-normal">0</p>
-                        <p class="text-sm text-gray-500 ">待付款</p>
+                        <p class="text-sm text-gray-500 ">待收货</p>
                     </div>
 
-                    <div class="w-1/4 pt-1 flex flex-col justify-center items-center">
+                    <div class="w-1/4  flex flex-col justify-center items-center">
                         <p class="text-xl text-black font-normal">0</p>
-                        <p class="text-sm text-gray-500 ">待付款</p>
+                        <p class="text-sm text-gray-500 ">待卖家同意</p>
                     </div>
                 </div>
 
                 <!--最后一小部分-->
                 <div class="flex flex-col w-full ">
                     <div class="w-full h-11 flex ml-5 items-center">
-                        <div class="flex mb-0 font-normal">
+                        <div class="flex items-end font-normal">
                             <div class=" text-sm text-[#FF4000] ">平台公告</div>
                             <div class="ml-6 text-sm text-gray-500 ">最新规则</div>
                             <div class="ml-6 text-sm text-gray-500 ">商人社区</div>
@@ -275,7 +276,7 @@
                     </div>
 
                     <div class="flex flex-row w-full">
-                        <div class="w-full flex justify-start items-center ml-5">
+                        <div class="w-full flex  items-center ml-5">
                             <div class="text-xs text-black">阶梯价档数变更意见征集</div>
                             <div class="ml-8 text-xs text-black">1688行业类目调整通知</div>
                         </div>
