--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 <body><div class="flex justify-center items-center bg-gray-100">
     <!--整个页面的左半边-->
 <div class="w-auto h-full flex flex-col ">
-    <div class="w-auto h-full bg-gray-100">
+    <div class="w-[9000px] h-full bg-gray-100">
         <header class="w-full h-8 bg-white flex justify-center items-center box-border border-solid border-b-gray-200 border-b">
             <div class=" text-gray-600 font text-xs flex items-center">
                 <svg class="text-[#FF4000]" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24"><path fill="currentColor" d="M16 1H8C6.34 1 5 2.34 5 4v16c0 1.66 1.34 3 3 3h8c1.66 0 3-1.34 3-3V4c0-1.66-1.34-3-3-3zm-2 20h-4v-1h4v1zm3.25-3H6.75V4h10.5v14z"/></svg>
