终于知道了怎么在缩放时不影响页面布局，原来是在整个框架前面加上对字体大小的限制就可以了。后面想改字体大小可以直接覆盖原来的字体格式。为这个东西困扰了这么久真的是难受

--- a/src/index.html
+++ b/src/index.html
@@ -258,7 +258,7 @@
                 </div>
 
                 <!--中间部分右半部分-->
-                <div class="w-[348px] h-full ml-4 bg-white box-border rounded-b shadow">
+                <div class="w-[348px] h-full ml-4 bg-white box-border rounded-b shadow text-sm">
                     <!--登录和注册部分-->
                     <div class="w-full h-[132px] p-[18px] flex flex-col bg-[#F0E5DA]">
                         <!--头像和欢迎词-->
