放大界面出问题了，需要版本回退，存一下档

--- a/src/index.html
+++ b/src/index.html
@@ -326,7 +326,7 @@
 
             </div>
 
-            <div class="h-auto flex flex-col justify-center">
+            <div class="h-auto flex flex-col justify-center items-center">
                 <!--爆品伙拼、新品直播-->
                 <div class="w-full h-[312px] flex justify-center items-center mt-4 mb-4 gap-x-4">
                     <!--爆品伙拼-->
@@ -569,29 +569,116 @@
                                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"><path fill="currentColor" d="M8.12 9.29L12 13.17l3.88-3.88a.996.996 0 1 1 1.41 1.41l-4.59 4.59a.996.996 0 0 1-1.41 0L6.7 10.7a.996.996 0 0 1 0-1.41c.39-.38 1.03-.39 1.42 0z"/></svg>
                                 </div>
                             </div>
-                            <!--底下所有的商品-->
 
+                            <!--底下所有的商品-->
+                            <ul class="w-full h-full flex flex-col justify-around items-center text-[14px]">
+                                <li class="w-full h-full flex justify-around items-center">
+                                    <div class="w-auto h-auto items-center box-border  border-gray-100 border rounded-[2px]">
+                                        <img class="w-[214px] h-[214px]"
+                                            src="assests/images/变色近视眼镜.webp" height="310" width="310"/>
+                                        <div class="flex m-2 items-center">
+                                            <img src="assests/images/红色公牛头.png" height="18" width="18"/>
+                                            <span class="ml-1">抖音网红同款变色近视眼镜</span>
+                                        </div>
+                                        <div class="flex m-2 items-center">
+                                            <span class="px-1 bg-[#FFEBE7] text-[#FF4000] rounded-[2px] text-xs">满500减10</span>
+                                            <span class="px-1 bg-[#F0F4FA] text-[#627AB8] rounded-[2px] text-xs">破损补寄</span>
+                                        </div>
+                                    </div>
+
+                                    <div class="w-auto h-auto items-center">
+                                        <img class="w-[214px] h-[214px]"
+                                             src="assests/images/变色近视眼镜.webp" height="310" width="310"/>
+                                    </div>
+
+                                    <div class="w-auto h-auto items-center">
+                                        <img class="w-[214px] h-[214px]"
+                                             src="assests/images/变色近视眼镜.webp" height="310" width="310"/>
+                                    </div>
+
+                                    <div class="w-auto h-auto items-center">
+                                        <img class="w-[214px] h-[214px]"
+                                             src="assests/images/变色近视眼镜.webp" height="310" width="310"/>
+                                    </div>
+
+                                    <div class="w-auto h-auto items-center">
+                                        <img class="w-[214px] h-[214px]"
+                                             src="assests/images/变色近视眼镜.webp" height="310" width="310"/>
+                                    </div>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
 
                 <!--新手指南等-->
-                <div class="flex justify-center items-center">
-                    <div class="w-[1200px] h-[180px] flex justify-center items-center mb-4 ">
-                        <div class="w-full h-full bg-white rounded shadow">
+                <div class="w-[1200px] h-[180px] bg-white mb-4 shadow rounded-md text-xs" >
+                    <ul class="w-full h-full flex justify-around items-center ">
 
-                        </div>
-                    </div>
+                        <li class="w-auto h-auto flex flex-col">
+                            <div class="w-[48px] h-[48px] bg-[#FF4000] rounded-md flex  justify-center items-center">
+                                <img
+                                    src="assests/images/新手指南.png" height="28" width="28"/>
+                            </div>
+                            <span class="text-sm my-3 ">新手指南</span>
+                            <span class="text-gray-600 ">了解1688 买家入门 买家保障</span>
+                            <span class="my-1 text-gray-600 ">买家客服</span>
+                        </li>
+
+                        <li class="w-auto h-auto flex flex-col">
+                            <div class="w-[48px] h-[48px] bg-[#FF4000] rounded-md flex justify-around items-center">
+                                <img
+                                    src="assests/images/商家服务.png" height="28" width="28"/>
+                            </div>
+                            <span class="text-sm my-3 ">商家服务</span>
+                            <span class="text-gray-600 ">卖家入门 商家认证 企业信用</span>
+                            <span class="my-1 text-gray-600 ">服务市场 卖家客服 开放平台</span>
+                        </li>
+
+                        <li class="w-auto h-auto flex flex-col">
+                            <div class="w-[48px] h-[48px] bg-[#FF4000] rounded-md flex justify-around items-center ">
+                                <img
+                                    src="assests/images/交易方式.png" height="28" width="28"/>
+                            </div>
+                            <span class="text-sm my-3 ">交易方式</span>
+                            <span class="text-gray-600 ">担保交易 账期交易 货到付款</span>
+                            <span class="my-1 text-gray-600 ">分阶段付款 先采后付</span>
+                        </li>
+
+                        <li class="w-auto h-auto flex flex-col">
+                            <div class="w-[48px] h-[48px] bg-[#FF4000] rounded-md flex justify-around items-center ">
+                                <img
+                                    src="assests/images/支付方式.png" height="24" width="24"/>
+                            </div>
+                            <span class="text-sm my-3 ">支付方式</span>
+                            <span class="text-gray-600 ">支付宝 信用卡支付 信任付</span>
+                            <span class="my-1 text-gray-600 ">先采后付 银行转账 跨境宝</span>
+                        </li>
+
+                        <li class="w-auto h-auto flex flex-col">
+                            <div class="w-[48px] h-[48px] bg-[#FF4000] rounded-md flex justify-around items-center ">
+                                <img
+                                    src="assests/images/1688服务.png" height="28" width="28"/>
+                            </div>
+                            <span class="text-sm my-3 ">1688服务</span>
+                            <span class="text-gray-600 ">售后服务 交易维权 数字营销</span>
+                            <span class="my-1 text-gray-600 ">开放平台 物流服务 常见问题</span>
+                        </li>
+                    </ul>
                 </div>
 
                 <!--两个广告图片-->
-                <div class="flex justify-center items-center">
-                    <div class="w-[1200px] h-[90px] flex justify-center items-center mb-4 ">
-                        <div class="w-full h-full bg-white rounded shadow">
+                    <div class="w-[1200px] h-[90px] flex justify-between items-center mb-4 ">
+                        <div class="w-auto h-full ">
+                            <img class="rounded"
+                                    src="assests/images/推荐热销榜单.webp" height="90" width="590"/>
+                        </div>
+                        <div class="w-auto h-full ">
+                            <img class="rounded"
+                                    src="assests/images/低价买好货.jpg" height="90" width="585"/>
 
                         </div>
                     </div>
-                </div>
 
             </div>
         </div>
