--- a/src/index.html
+++ b/src/index.html
@@ -326,7 +326,7 @@
 
             </div>
 
-            <div class="h-auto flex flex-col justify-center items-center">
+            <div class="h-auto flex flex-col justify-center items-center text-base">
                 <!--爆品伙拼、新品直播-->
                 <div class="w-full h-[312px] flex justify-center items-center mt-4 mb-4 gap-x-4">
                     <!--爆品伙拼-->
