--- a/src/index.html
+++ b/src/index.html
@@ -196,12 +196,12 @@
                     <div class="w-full my-0 mx-auto carousel relative">
                         <!--用flexbox类将轮播图水平排列-->
                         <div class="overflow-hidden flex w-full h-64 carousel-images relative rounded">
-                            <img src="/src/assests/images/lunbotu1.png" alt="Image 1" class="flex-grow-0 w-full h-full inset-0 ">
-                            <img src="/src/assests/images/lunbotu2.jpg" alt="Image 2" class="flex-grow-0 w-full h-full inset-0 hiddent" >
-                            <img src="/src/assests/images/lunbotu3.png" alt="Image 3" class="flex-grow-0 w-full h-full inset-0 hiddent" >
-                            <img src="/src/assests/images/lunbotu4.png" alt="Image 4" class="flex-grow-0 w-full h-full inset-0 hiddent" >
-                            <img src="/src/assests/images/lunbotu5.avif" alt="Image 5" class="flex-grow-0 w-full h-full inset-0 hiddent" >
-                            <img src="/src/assests/images/lunbotu6.png" alt="Image 6" class="flex-grow-0 w-full h-full inset-0 hiddent" >
+                            <img src="assests/images/lunbotu1.png" alt="Image 1" class="flex-grow-0 w-full h-full inset-0 ">
+                            <img src="assests/images/lunbotu2.jpg" alt="Image 2" class="flex-grow-0 w-full h-full inset-0 hiddent" >
+                            <img src="assests/images/lunbotu3.png" alt="Image 3" class="flex-grow-0 w-full h-full inset-0 hiddent" >
+                            <img src="assests/images/lunbotu4.png" alt="Image 4" class="flex-grow-0 w-full h-full inset-0 hiddent" >
+                            <img src="assests/images/lunbotu5.avif" alt="Image 5" class="flex-grow-0 w-full h-full inset-0 hiddent" >
+                            <img src="assests/images/lunbotu6.png" alt="Image 6" class="flex-grow-0 w-full h-full inset-0 hiddent" >
 
                             <!--添加小圆点-->
                             <div class="carousel-dots flex justify-center  bottom-0 right-0 mb-4 mr-4 absolute">
