--- a/src/index.html
+++ b/src/index.html
@@ -1032,7 +1032,7 @@
 
 <!--整个页面的右边部分-->
 
-<div class="w-[36px] h-full text-gray-600 flex flex-col justify-center items-center bg-gray-200 right-0 top-0 fixed z-50 antialiased">
+<div class="w-[36px] h-full text-gray-600 flex flex-col justify-center items-center bg-gray-200 right-0 top-0 fixed z-50 antialiased text-sm">
     <div class="w-full h-full flex flex-col justify-center items-center ">
         <div class="w-auto h-auto flex flex-col justify-center items-center gap-y-12">
             <div class="flex flex-col items-center hover:text-[#FF4000]">
